...
                  child: Container(
                    padding: const EdgeInsets.only(left: 8, right: 8),
                    decoration: BoxDecoration(
                      color: AppColors.cardBackgroundTransparent,
                    ),
                    child: Text(
                      'TENGO',
                      style: AppTextStyles.smallLabel,
                    ),
                  ),
                ),
              ),
              const SizedBox(width: 60),
...
                  child: Container(
                    padding: const EdgeInsets.only(left: 8, right: 8),
                    decoration: BoxDecoration(
                      color: AppColors.cardBackgroundTransparent,
                    ),
                    child: Text(
                      'QUIERO',
                      style: AppTextStyles.smallLabel,
                    ),
                  ),
                ),
              ),
            ],
...
