...

  @override
  Widget build(BuildContext context) {

    final showFiat = currentCurrency.type == CurrencyType.fiat;
    final currencies = showFiat ? Currencies.fiatCurrencies : Currencies.cryptoCurrencies;
    final title = showFiat ? 'FIAT' : 'Cripto';

    return SizedBox(
      height: MediaQuery.of(context).size.height * 0.70,
      child: Column(
        children: [
          Container(
...
